# Tileset-Generator

./: .gitignore  CMakeLists.txt  atlas.json  doc
src/: atlasGen.c  main.c  structs.h
